# digital-nutrition

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SKILL.md  conftest.py  findings.md  progress.md  pyproject.toml  requirements.txt  task_plan.md
.github/workflows/: release.yml  test.yml
data/: domain_rules.json
digital_nutrition/: __init__.py  analyze.py  classify.py  cli.py  cli_print.py  fetch_echarts.py  insight.py  models.py  persona.py  serve.py  trend.py
digital_nutrition/history/: export.py  store.py
digital_nutrition/report/: generator.py  share.py
digital_nutrition/sources/: base.py  browser.py  git.py
docs/superpowers/plans/: 2026-06-04-v0.2-trend-features.md
docs/superpowers/specs/: 2026-06-05-v0.5-design.md
references/: insight-patterns.md  persona-types.md
scripts/: analyze.py  classify.py  collect_chrome.py  collect_edge.py  collect_git.py  history.py  insight.py  main.py  report_generator.py  serve.py  trend.py
templates/: report.html.j2
tests/: test_analyze.py  test_browser_source.py  test_classify.py  test_cli_helpers.py  test_cli_print.py  test_collect_chrome.py  test_collect_edge.py  test_collect_git.py  test_e2e.py  test_export.py  test_history.py  test_insight.py  test_main.py  test_models.py  test_persona.py  test_report_generator.py  test_serve.py  test_share.py  test_trend.py
tests/fixtures/: create_fixture.py
